--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Landing Page | HTML CSS | IceCream</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
     <nav>
