--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav>
       <div class="menu">
         <div class="logo">
-          <a href="#"><img src="freeze.jpg" alt=""></a>
+          <a href="#"><img src="./images/freeze.jpg" alt=""></a>
         </div>
         <ul>
           <li><a href="#">Home</a></li>
@@ -29,7 +29,7 @@
       <p>for you, for free. You can replace all this text with your own text</p>
       </div>
       <div class="image">
-        <img src="depositphotos.jpg">
+        <img src="./images/depositphotos.jpg">
       </div>
     </div>
 
@@ -46,9 +46,9 @@
     <div class="div3">
       <ul>
         <li class="img1"><a href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3AT56RsOiCyBI8D2_KL1MEjL8qU--8XC7pg&usqp=CAU" alt=""><p class="p1">Flavours</p></a></li>
-        <li class="img2"><a href=""><img src="ourStory.png" alt=""><p class="p2">Our Story</p></a></li>
-        <li class="img3"><a href=""><img src="products.png" alt=""><p class="p3">Products</p></a></li>
-        <li class="img4"><a href=""><img src="location.png" alt=""><p class="p4">Location</p></a></li>
+        <li class="img2"><a href=""><img src="./images/ourStory.png" alt=""><p class="p2">Our Story</p></a></li>
+        <li class="img3"><a href=""><img src="./images/products.png" alt=""><p class="p3">Products</p></a></li>
+        <li class="img4"><a href=""><img src="./images/location.png" alt=""><p class="p4">Location</p></a></li>
       </ul>
     </div>
 
